--- a/views/admin/homePage.ejs
+++ b/views/admin/homePage.ejs
@@ -5,31 +5,115 @@
 
             <div class="container-xxl flex-grow-1 container-p-y">
               <div class="row">
-                <div class="col-lg-12 mb-4 order-0">
+                <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4 order-0">
                   <div class="card">
-                    <div class="d-flex align-items-end row">
-                      <div class="col-sm-7">
-                        <div class="card-body">
-                          <h5 class="card-title text-primary">Congratulations John! 🎉</h5>
-                          <p class="mb-4">
-                            You have done <span class="fw-bold">72%</span> more sales today. Check your new badge in
-                            your profile.
-                          </p>
-
-                          <a href="javascript:;" class="btn btn-sm btn-outline-primary">View Badges</a>
+                    <div class="card-body">
+                      <div class="card-title d-flex align-items-start justify-content-between">
+                        <div class="avatar flex-shrink-0">
+                          <img src="/adminpanel/assets/img/icons/unicons/users.png" alt="Credit Card" class="rounded" />
+                        </div>
+                        <div class="dropdown">
+                          <button
+                            class="btn p-0"
+                            type="button"
+                            id="cardOpt4"
+                            data-bs-toggle="dropdown"
+                            aria-haspopup="true"
+                            aria-expanded="false"
+                          >
+                            <i class="bx bx-dots-vertical-rounded"></i>
+                          </button>
+                          <div class="dropdown-menu dropdown-menu-end" aria-labelledby="cardOpt4">
+                            <a class="dropdown-item" href="javascript:void(0);">Görüntüle</a>
+                          </div>
                         </div>
                       </div>
-                      <div class="col-sm-5 text-center text-sm-left">
-                        <div class="card-body pb-0 px-0 px-md-4">
-                          <img
-                            src="/adminpanel/assets/img/illustrations/man-with-laptop-light.png"
-                            height="140"
-                            alt="View Badge User"
-                            data-app-dark-img="illustrations/man-with-laptop-dark.png"
-                            data-app-light-img="illustrations/man-with-laptop-light.png"
-                          />
+                      <span class="d-block mb-1">Kullanıcı Sayısı</span>
+                      <h5 class="card-title text-nowrap mb-0 text-danger"><%= totalNumberOfUsers %></h5>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4 order-0">
+                  <div class="card">
+                    <div class="card-body">
+                      <div class="card-title d-flex align-items-start justify-content-between">
+                        <div class="avatar flex-shrink-0">
+                          <img src="/adminpanel/assets/img/icons/unicons/admin.png" alt="Credit Card" class="rounded" />
+                        </div>
+                        <div class="dropdown">
+                          <button
+                            class="btn p-0"
+                            type="button"
+                            id="cardOpt4"
+                            data-bs-toggle="dropdown"
+                            aria-haspopup="true"
+                            aria-expanded="false"
+                          >
+                            <i class="bx bx-dots-vertical-rounded"></i>
+                          </button>
+                          <div class="dropdown-menu dropdown-menu-end" aria-labelledby="cardOpt4">
+                            <a class="dropdown-item" href="javascript:void(0);">Görüntüle</a>
+                          </div>
                         </div>
                       </div>
+                      <span class="d-block mb-1">Admin Sayısı</span>
+                      <h5 class="card-title text-nowrap mb-0 text-danger"><%= totalNumberOfAdmin %></h5>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4 order-0">
+                  <div class="card">
+                    <div class="card-body">
+                      <div class="card-title d-flex align-items-start justify-content-between">
+                        <div class="avatar flex-shrink-0">
+                          <img src="/adminpanel/assets/img/icons/unicons/normalUser.png" alt="Credit Card" class="rounded" />
+                        </div>
+                        <div class="dropdown">
+                          <button
+                            class="btn p-0"
+                            type="button"
+                            id="cardOpt4"
+                            data-bs-toggle="dropdown"
+                            aria-haspopup="true"
+                            aria-expanded="false"
+                          >
+                            <i class="bx bx-dots-vertical-rounded"></i>
+                          </button>
+                          <div class="dropdown-menu dropdown-menu-end" aria-labelledby="cardOpt4">
+                            <a class="dropdown-item" href="javascript:void(0);">Görüntüle</a>
+                          </div>
+                        </div>
+                      </div>
+                      <span class="d-block mb-1">Normal Kullanıcı Sayısı</span>
+                      <h5 class="card-title text-nowrap mb-0 text-danger"><%= totalNumberOfNormalUser %></h5>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4 order-0">
+                  <div class="card">
+                    <div class="card-body">
+                      <div class="card-title d-flex align-items-start justify-content-between">
+                        <div class="avatar flex-shrink-0">
+                          <img src="/adminpanel/assets/img/icons/unicons/demo.png" alt="Credit Card" class="rounded" />
+                        </div>
+                        <div class="dropdown">
+                          <button
+                            class="btn p-0"
+                            type="button"
+                            id="cardOpt4"
+                            data-bs-toggle="dropdown"
+                            aria-haspopup="true"
+                            aria-expanded="false"
+                          >
+                            <i class="bx bx-dots-vertical-rounded"></i>
+                          </button>
+                          <div class="dropdown-menu dropdown-menu-end" aria-labelledby="cardOpt4">
+                            <a class="dropdown-item" href="javascript:void(0);">Görüntüle</a>
+                          </div>
+                        </div>
+                      </div>
+                      <span class="d-block mb-1">Demo Kullanıcı Sayısı</span>
+                      <h5 class="card-title text-nowrap mb-0 text-danger"><%= totalNumberOfDemo %></h5>
                     </div>
                   </div>
                 </div>
