--- a/views/admin/userDetail.ejs
+++ b/views/admin/userDetail.ejs
@@ -5,42 +5,42 @@
             <div class="container-xxl flex-grow-1 container-p-y">
               <div class="row">
                 <div class="col-lg-12 mb-4 order-0">
-                    <div class="card mb-4">
-                        <h5 class="card-header">Profilim</h5>
-                        <div class="card-body">
-                          <div class="d-flex align-items-start align-items-sm-center gap-4">
-                            <% if(!user.image) { %>
-                                <img src="http://cdn.onlinewebfonts.com/svg/img_504579.png" alt="default-image"
-                                    class="d-block rounded"
-                                    height="100"
-                                    width="100"
-                                    id="uploadedAvatar"
-                                />
-                            <% } else { %>
-                            <img src="http://localhost:3000/<%=user.image%>" alt="avatar"
+                  <div class="card mb-4">
+                    <h5 class="card-header">Profilim</h5>
+                    <div class="card-body">
+                      <div class="d-flex align-items-start align-items-sm-center gap-4">
+                        <% if(!user.image) { %>
+                          <img src="/adminpanel/assets/img/icons/unicons/userDefault.png" alt="default-image"
                               class="d-block rounded"
                               height="100"
                               width="100"
                               id="uploadedAvatar"
-                            />
-                            <% } %>
-                          <form id="formAccountSettings" method="PATCH" onsubmit="return false">
-                            <div class="button-wrapper">
-                                <label for="upload" class="btn btn-primary me-2 mb-4" tabindex="0">
-                                    <span class="d-none d-sm-block"><i class="bx bx-image-add me-1"></i>Yeni fotoğraf</span>
-                                    <i class="bx bx-upload d-block d-sm-none"></i>
-                                    <input
-                                    type="file"
-                                    id="upload"
-                                    name="image"
-                                    class="account-file-input"
-                                    hidden
-                                    accept="image/png, image/jpeg"
-                                    />
-                                </label>
-                                <p class="text-muted mb-0">E-Posta Adresi : <span class="text-primary"><%=user.email%></span></p>
-                                <p class="text-muted mb-0">Kullanıcı Adı : <span class="text-primary"><%=user.username%></span></p>
-                                <p class="text-muted mb-0">Yetki : <span class="text-danger"><%=user.role%></span></p>
+                          />
+                        <% } else { %>
+                          <img src="http://localhost:3000/<%=user.image%>" alt="avatar"
+                            class="d-block rounded"
+                            height="100"
+                            width="100"
+                            id="uploadedAvatar"
+                          />
+                        <% } %>
+                        <form id="formAccountSettings" method="PATCH" onsubmit="return false">
+                          <div class="button-wrapper">
+                            <label for="upload" class="btn btn-primary me-2 mb-4" tabindex="0">
+                                <span class="d-none d-sm-block"><i class="bx bx-image-add me-1"></i>Yeni fotoğraf</span>
+                                <i class="bx bx-upload d-block d-sm-none"></i>
+                                <input
+                                type="file"
+                                id="upload"
+                                name="image"
+                                class="account-file-input"
+                                hidden
+                                accept="image/png, image/jpeg"
+                                />
+                            </label>
+                            <p class="text-muted mb-0">E-Posta Adresi : <span class="text-primary"><%=user.email%></span></p>
+                            <p class="text-muted mb-0">Kullanıcı Adı : <span class="text-primary"><%=user.username%></span></p>
+                            <p class="text-muted mb-0">Yetki : <span class="text-danger"><%=user.role%></span></p>
                             </div>
                           </div>
                         </div>
@@ -63,6 +63,7 @@
                                 <label for="lastName" class="form-label">soyad</label>
                                 <input class="form-control" type="text" name="surname" id="surname" value="<%=user.surname%>" />
                               </div>
+                              <% if(authenticateUser.role === 'admin') { %>
                               <div class="mb-3 col-md-6">
                                 <label for="role" class="form-label">yetki</label>
                                 <select class="form-select role-select" aria-label="Default select example">
@@ -71,6 +72,7 @@
                                   <option value="admin">admin</option>
                                 </select>
                               </div>
+                              <% } %>
                             </div>
                             <div class="mt-2">
                               <button type="submit" class="btn btn-primary me-2">Güncelle</button>
@@ -81,7 +83,36 @@
                           </form>
                         </div>
                         <!-- /Account -->
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="container-xxl flex-grow-1 container-p-y">
+              <div class="row">
+                <div class="col-lg-12 mb-4 order-0">
+                  <div class="card mb-4">
+                    <h5 class="card-header">Şifre Değiştir</h5>
+                      <hr class="my-0" />
+                      <div class="card-body">
+                        <form id="passwordChange" method="PATCH" onsubmit="return false">
+                          <input class="form-control" type="hidden" name="updateUserId" id="updateUserId" value="<%=user._id%>" />
+                          <div class="row">
+                            <div class="mb-3 col-6">
+                              <label for="old-password" class="form-label">Eski şifre</label>
+                              <input class="form-control" type="password" id="old-password" name="oldPassword" autofocus placeholder="&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;" />
+                            </div>
+                            <div class="mb-3 col-6">
+                              <label for="new-password" class="form-label">Yeni şifre</label>
+                              <input class="form-control" type="password" id="new-password" name="newPassword" autofocus placeholder="&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;"/>
+                            </div>
+                          </div>
+                          <div class="mt-2">
+                            <button type="submit" class="btn btn-primary me-2">Güncelle</button>
+                          </div>
+                        </form>
                       </div>
+                  </div>
                 </div>
               </div>
             </div>
@@ -134,5 +165,30 @@
             };
             reader.readAsDataURL(file);
         }
+    });
+
+    $("#passwordChange").on("submit",function(e) {
+        e.preventDefault();
+        var formData = new FormData(this);
+        $.ajax({
+            url : "http://localhost:3000/api/kurumsal/users/updateUserPassword",
+            type : "PATCH",
+            data : formData,
+            success : (response) => {
+                Swal.fire({
+                    icon: "success",
+                    text: response.msg
+                });
+            },
+            error : (xhr, status, error) => {
+                Swal.fire({
+                    icon: "error",
+                    text: xhr.responseJSON.msg
+                });
+            },
+            cache: false,
+            contentType: false,
+            processData: false
+        });
     });
 </script>
