--- a/views/admin/include/footer.ejs
+++ b/views/admin/include/footer.ejs
@@ -50,7 +50,7 @@
 
 <script>
     $(document).ready(function () {
-    let sideelements =  ['dashboard','users'];
+    let sideelements =  ['dashboard','users','services'];
         let href = $(location).attr('href');
         sideelements.forEach(element => {
         if (href.indexOf(element) > -1) {
