--- a/views/admin/include/header.ejs
+++ b/views/admin/include/header.ejs
@@ -90,6 +90,12 @@
                   <div data-i18n="Analytics">Kullanıcılar</div>
                 </a>
             </li>
+            <li class="menu-item logout services">
+              <a href="http://localhost:3000/api/kurumsal/services" class="menu-link">
+                <i class="menu-icon tf-icons bx bx-list-plus"></i>
+                <div data-i18n="Analytics">Hizmetler</div>
+              </a>
+          </li>
             <li class="menu-item" id="logout">
                 <a href="javascript:void(0)" class="menu-link">
                   <i class="menu-icon tf-icons bx bx-log-out-circle"></i>
@@ -121,7 +127,7 @@
                 <li class="nav-item navbar-dropdown dropdown-user dropdown">
                   <a data-fancybox class="nav-link dropdown-toggle hide-arrow d-flex justify-content-between align-items-center" href="<%=authenticateUser.image%>">
                     <div class="avatar avatar-online">
-                      <img src="<%=authenticateUser.image%>" alt class="w-px-40 h-auto rounded-circle" />
+                      <img src="<%=authenticateUser.image%>" alt class="w-100 h-100 h-auto rounded-circle" />
                     </div>
                   </a>
                 </li>
